@@ -17,6 +17,7 @@ Changelog for 1.3.14
 * Experimental support for migrating from SQL-Ledger via Setup.pl (Chris T)
 * Fixed POD issues with lsmb-request.pl (h/t Robert C) (Chris T item 3472648)
 * Fixed means of adding parts/editing pricelist missing (Chris T, bug 3442163)
+* Fixed unknown db detected as SQL-Ledger (Chris T, bug 3510039)
 
 Andres B is Andres Basile
 
